--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AssistanceType"></activity>
+        <activity android:name=".ShowPrescription"></activity>
+        <activity android:name=".AssistanceType" />
         <activity android:name=".CreateAppointment" />
         <activity android:name=".ForgotPassword" />
         <activity
